# PySelenScrapr

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  sample.py  setup.py
.github/workflows/: pypi.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  pyselenscrapr.rst  usage.rst
pyselenscrapr/: ScrapingBackend.py  ScrapingBot.py  ScrapingLogic.py  ScrapingStep.py  ScrapingStepGroup.py  ScrapingStepLoop.py  ScrapingStepPagination.py  ValidationError.py
