[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"



[project]
name = "pyselenscrapr"
authors = [{name = "donnercody", email = "donnercody86@gmail.com"}]
version = "0.0.7"
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "selenium",
    "webdriver_manager",
    "numpy",
    "tqdm",]
description = "A web scraping library for selenium and beautifulsoup"